Updated experience section

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     <div class = "p-3" id="aboutme">   
                         <p class="responsive-text">I am a programmer passionate about full-stack web development, machine learning and programming innovative solutions to real-world problems.
                             Currently, I am enrolled at the University of Warwick pursuing a Bachelors degree in Computer Science in my third and final year,
-                            but when I am not studying I love to play the piano, go to the gym and work on personal coding projects.
+                            but when I am not studying I like to play the piano and work on personal coding projects.
                             While I am constantly aiming to refine my skills in web development and machine learning, I am also passionate about learning new skills and technologies.</p>
                         <p class="responsive-text">Currently, I am looking to leverage my technical expertise and experience into a graduate Software Development role. Please take a look at <a href="#portfolio" id="portfolio_button">my portfolio</a></p>   
                     </div>
@@ -118,13 +118,10 @@
                                     <div class="collapse" id="info1">
                                         <ul style="padding: 5px; margin-top: 10px; color: white;">
                                             <li class="custom-list-item mb-3">
-                                                <i class="fa-solid fa-arrow-right"></i>&nbsp; Graduated sixth form with an IB Diploma, taking higher Mathematics, Physics and Computer Science.
+                                                <i class="fa-solid fa-arrow-right"></i>&nbsp; Graduated sixth form with an IB Diploma, taking higher Mathematics, Physics and Computer Science. Achieved 43/45 points in total and a 7 in all my higher level subjects.
                                             </li>
                                             <li class="custom-list-item mb-3">
-                                                <i class="fa-solid fa-arrow-right"></i>&nbsp; 43 points total, achieving 7 in all higher level subjects
-                                            </li>
-                                            <li class="custom-list-item mb-3">
-                                                <i class="fa-solid fa-arrow-right"></i>&nbsp; Completed my Extended Essay on the performance of genetic algorithms on enhancing contrast of images against traditional algorithms, which scored an A.
+                                                <i class="fa-solid fa-arrow-right"></i>&nbsp; Completed my Extended Essay on the performance of genetic algorithms on enhancing contrast of images compared to traditional algorithms, which scored an A.
                                             </li>
                                         </ul>
                                     </div>
@@ -145,19 +142,39 @@
                                                 <i class="fa-solid fa-arrow-right"></i>&nbsp; In the Summer of my second year I interned at AVEVA in their Cambridge Science Park office, in which I was a part of AVEVA's E3D team (an application to model industrial plants) with two other interns
                                             </li>
                                             <li class="custom-list-item mb-3">
-                                                <i class="fa-solid fa-arrow-right"></i>&nbsp; Our main project was to develop a working prototype AI assistant that would be implemented into the E3D application, with the help of a ML expert. At the end of the internship we would present our project to the other teams and interns
+                                                <i class="fa-solid fa-arrow-right"></i>&nbsp; Our main project was to develop a working prototype AI chatbot assistant that would be implemented into the E3D application. I found learning ML was challenging, but rewarding as at the end I knew all the steps to build and evaluate my own model.
                                             </li>
                                             <li class="custom-list-item mb-3">
-                                                <i class="fa-solid fa-arrow-right"></i>&nbsp; Based on a retrieval-augmented generation (RAG) architecture, we developed a basic pipeline utilising Langchain framework, which was then evaluated using Langsmith and then enhanced with advanced RAG techniques
+                                                <i class="fa-solid fa-arrow-right"></i>&nbsp; Based on a retrieval-augmented generation (RAG) architecture, we developed a basic pipeline utilising OpenAI's GPT-4o model and Langchain framework, which was then enhanced with advanced RAG techniques was evaluated using Langsmith.
                                             </li>
                                         </ul>
                                     </div>
-                                <li class="list-group-item"  style="border-top: solid 1px white">
+                                </li>
+                                <li class="list-group-item" style="border-top: solid 1px white">
                                     <div data-bs-toggle="collapse" href="#info4" role="button" aria-expanded="false" aria-controls="info4" class="hover-underline">
+                                        Virtual Software Engineer - JP Morgan, Forage
+                                        <span class="float-end">September 2023</span>
+                                    </div>
+                                    <div class="collapse" id="info4">
+                                        <ul style="padding: 5px; margin-top: 10px;">
+                                            <li class="custom-list-item mb-3">
+                                                <i class="fa-solid fa-arrow-right"></i>&nbsp; To improve my Software Engineering and problem solving skills, I enrolled in a Software Engineering job simulation course on The Forage. 
+                                            </li>
+                                            <li class="custom-list-item mb-3">
+                                                <i class="fa-solid fa-arrow-right"></i>&nbsp; The tasks were all based around fixing broken repository files. The final task included creating a responsive website with a live graph streaming both current and historic stock data in a visually appealing way.
+                                            </li>
+                                            <li class="custom-list-item mb-3">
+                                                <i class="fa-solid fa-arrow-right"></i>&nbsp; This experience was my first introduction into Software Engineering. While I found the tasks difficult to follow, it was valuable problem-solving experience.
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </li>
+                                <li class="list-group-item"  style="border-top: solid 1px white">
+                                    <div data-bs-toggle="collapse" href="#info5" role="button" aria-expanded="false" aria-controls="info5" class="hover-underline">
                                         Tech Tutor, Funtech
                                         <span class="float-end">July - Sept, 2023</span>
                                     </div>
-                                    <div class="collapse" id="info4">
+                                    <div class="collapse" id="info5">
                                         <ul style="padding: 5px; margin-top: 10px;">
                                             <li class="custom-list-item mb-3">
                                                 <i class="fa-solid fa-arrow-right"></i>&nbsp; I had the opportunity to take the lead in teaching Python to kids of all ages during the Summer of my first year, providing a solid programming foundation to many young learners.
@@ -206,7 +223,7 @@
                                 <img src="assets/PortfolioWebsite.png" class="d-block w-100 carousel-image">
                                 <div class="carousel-caption d-none d-md-block">
                                     <h5>Portfolio Website</h5>
-                                    <p>Restructured and customised the code from a Bootstrap template to create this website.</p>
+                                    <p>Restructured and customised the code from a Bootstrap template to create this website. Since releasing it, I have been adding new features to make it more interactive and visually appealing.</p>
                                 </div>
                             </a>
                         </div>
