--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                                 <img src="assets/taskmanager.png" class="d-block w-100 carousel-image">
                                 <div class="carousel-caption d-none d-md-block">
                                     <h5>Full-stack Task Manager Web Application</h5>
-                                    <p>Created a full-stack productivity web application for users to manage their tasks and complete tasks in the application. Built using Next.js and React, as well as PocketBase to maintain a backend data storage.</p>
+                                    <p>Created a full-stack productivity web application for users to manage their tasks with a helpful AI assistant based on a Llama model. Built using Next.js and React, as well as PocketBase to maintain a backend data storage.</p>
                                 </div>
                             </a>
                         </div>
@@ -256,49 +256,6 @@
                         <span class="visually-hidden">Next</span>
                     </button>
                 </div>
-                    <!-- <div>
-                        <h3 class="mb-4 text-center p-3">
-                            Skills
-                        </h3>
-                    </div> -->
-                    <!-- <div class="row text-center mb-3 justify-content-center">
-                        <div class="col-lg-4 col-md-10 mb-4">
-                            <div class="card h-100">
-                                <div class="card-body">
-                                    <h4 class="card-title">Java <i class="fab fa-java"></i></h4>
-                                    <ul class="card-list">
-                                        <li class = "mb-3"><i class="fa-regular fa-square custom-card-item"></i>&nbsp; Proficient in both Procedural and Object Oriented Programming.</li>
-                                        <li class = "mb-3"><i class="fa-regular fa-square custom-card-item"></i>&nbsp; Programmed a robot to path find its way through a maze, and over successive generations find the optimal path, using OOP.</li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-lg-4 col-md-10 mb-4">
-                            <div class="card h-100">
-                                <div class="card-body">
-                                    <h4 class="card-title">Python <i class="fab fa-python"></i></h4>
-                                    <ul class="card-list">
-                                        <li class = "mb-3"><i class="fa-regular fa-square custom-card-item"></i>&nbsp; Proficient in Procedural and Object Oriented Programming.</li>
-                                        <li class = "mb-3"><i class="fa-regular fa-square custom-card-item"></i>&nbsp; Developed a MiniMax Algorithm with Alpha/Beta pruning to play a game of Connect 4 optimally against a human player</li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-lg-4 col-md-10 mb-4">
-                            <div class="card h-100">
-                                <div class="card-body">
-                                    <h4 class="card-title">Web Development <i class="fas fa-code"></i></h4>
-                                    <ul class="card-list">
-                                        <li class = "mb-3"><i class="fa-regular fa-square custom-card-item"></i>&nbsp; Knowledgeable in HTML, CSS and JavaScript.</li>
-                                        <li class = "mb-3"><i class="fa-regular fa-square custom-card-item"></i>&nbsp; Restructured and customised the code from a Bootstrap template to create this website.</li>
-                                        <li class = "mb-3"><i class="fa-regular fa-square custom-card-item"></i>&nbsp; Developed a website to manage events for the CS Department at Warwick, using Flask.</li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                    </div> -->
 
 
                 </div>
