about me button fade fix

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <div class="col-lg-12 col-md-12 text-center">
                         <h1 class="mb-4 display-4 fade fade-object" id="name_fade_in">Oliver Brown</h1>
                         <h3 class="h4 fade fade-object" id="desc_fade_in" style="margin-bottom : 3.5rem"><em>is an aspiring software engineer from London.</em></h3>
-                        <a class="glow-card btn-xl p-3 fade-object mt-5" href="#about" id="about_button" style="font-size: 0.9rem">Learn more about me</a>
+                        <a class="glow-card btn-l p-3 fade fade-object mt-5" href="#about" id="about_button" style="font-size: 0.9rem" >Learn more about me</a>
                     </div>
                 </div>
             </header>
