initial active carousel slide moved to first slide

--- a/index.html
+++ b/index.html
@@ -195,8 +195,8 @@
                 <h3 class = "mb-5 text-center">Projects <i class="fas fa-folder-open"></i></h3>
                 <div id="carouselExampleIndicators" class="carousel slide" style="border: solid 1px white">
                     <div class="carousel-indicators">
-                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" aria-label="Task Manager"></button>
-                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" class="active" aria-current="true" aria-label="Connect 4 Solver"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Task Manager"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Connect 4 Solver"></button>
                         <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Portfolio Website"></button>
                         <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Network intrusion sytsem"></button>
                         <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="PassManager"></button>
