small website changes - more to do

--- a/index.html
+++ b/index.html
@@ -77,11 +77,11 @@
                         <h2 class="mb-5">About Me</h2>
                     </div>
                     <div class = "p-3" id="aboutme">   
-                        <p class="responsive-text">I am a programmer passionate about full-stack web development, machine learning and programming innovative solutions to real-world problems.
+                        <p class="responsive-text">I am a developer passionate about full-stack web development, machine learning and software development.
                             Currently, I am enrolled at the University of Warwick pursuing a Bachelors degree in Computer Science in my third and final year,
                             but when I am not studying I like to play the piano and work on personal coding projects.
-                            While I am constantly aiming to refine my skills in web development and machine learning, I am also passionate about learning new skills and technologies.</p>
-                        <p class="responsive-text">Currently, I am looking to leverage my technical expertise and experience into a graduate Software Development role. Please take a look at <a href="#portfolio" id="portfolio_button">my portfolio</a></p>   
+                            While I am constantly aiming to refine my skills in full-stack development, I am also passionate about learning new skills and technologies.</p>
+                        <p class="responsive-text">Currently, I am looking to leverage my technical expertise and experience into an entry-level Software Development role. Please take a look at <a href="#portfolio" id="portfolio_button">my portfolio</a></p>   
                     </div>
                 </div>
             </section>
@@ -154,8 +154,8 @@
                                 </li>
                                 <li class="list-group-item" style="border-top: solid 1px white">
                                     <div data-bs-toggle="collapse" href="#info4" role="button" aria-expanded="false" aria-controls="info4" class="hover-underline">
-                                        Virtual Software Engineer - JP Morgan, Forage
-                                        <span class="float-end">September 2023</span>
+                                        Virtual Software Engineer, JP Morgan, Forage
+                                        <span class="float-end">Sept 2023</span>
                                     </div>
                                     <div class="collapse" id="info4">
                                         <ul style="padding: 5px; margin-top: 10px;">
