--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                             </ul>
                         </div>
                         <div class="col-lg-12 col-md-12 text-center mb-5">
-                            <h3 class = "mb-5">Experience <i class="fas fa-briefcase"></i></h3>
+                            <h3 class = "mb-5">Work Experience <i class="fas fa-briefcase"></i></h3>
                             <ul class="list-group">
                                 <li class="list-group-item">
                                     <div data-bs-toggle="collapse" href="#info3" role="button" aria-expanded="false" aria-controls="info3" class="hover-underline">
@@ -154,7 +154,7 @@
                                 </li>
                                 <li class="list-group-item" style="border-top: solid 1px white">
                                     <div data-bs-toggle="collapse" href="#info4" role="button" aria-expanded="false" aria-controls="info4" class="hover-underline">
-                                        Virtual Software Engineer, JP Morgan, Forage
+                                        Virtual Software Engineer at JP Morgan, Forage
                                         <span class="float-end">Sept 2023</span>
                                     </div>
                                     <div class="collapse" id="info4">
