Modified carousel with new project

--- a/index.html
+++ b/index.html
@@ -218,14 +218,20 @@
                             </a>
                         </div>
                         <div class="carousel-item">
-                            <a href="https://github.com/oliverbrown1/Minimax_Connect_4" target="_blank">
+                            <a href="https://github.com/oliverbrown1/gradient-boosted-trees" target="_blank">
                                 <img src="assets/connect4.png" class="d-block w-100 carousel-image">
                                 <div class="carousel-caption d-none d-md-block">
-                                    <h5>Connect 4 using AI</h5>
-                                    <p>Developed a MiniMax Algorithm with Alpha/Beta pruning to play a game of Connect 4 optimally against a human player</p>
+                                    <h5>Gradient Boosted (XGBoost) Trees</h5>
+                                    <p>Developed a popular ensemble Machine Learning algorithm to perform well on a supervised dataset for California house prices. Created from scratch using Jupyter Notebook and Python libraries for data manipulation.</p>
                                     <div class="tech-icons mt-1 mb-1">
                                         <span class="tt" data-bs-placement="top" title="Python"><img height="30" width="30" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/python/python-original.svg" /></span>
+                                        <span class="tt" data-bs-placement="top" title="Jupyter Notebook">
+                                            <img height="25" width="25" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/jupyter/jupyter-original.svg" />
+                                        </span>
+                                        <span class="tt me-2" data-bs-placement="top" title="Pandas"><img height="24" width="24" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/pandas/pandas-original.svg" /></span>
+
                                     </div>
+                                    
                                 </div>
                             </a>
                         </div>
