new project added

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                         <p class="responsive-text">I am a developer passionate about full-stack web development, machine learning and software development.
                             Currently, I am enrolled at the University of Warwick pursuing a Bachelors degree in Computer Science in my third and final year,
                             but when I am not studying I like to play the piano and work on personal coding projects.
-                            While I am constantly aiming to refine my skills in full-stack development, I am also passionate about learning new skills and technologies.</p>
+                            While I am constantly aiming to refine my skills in full-stack development and machine learning, I am also passionate about learning new skills and technologies.</p>
                         <p class="responsive-text">Currently, I am looking to leverage my technical expertise and experience into an entry-level Software Development role. Please take a look at <a href="#portfolio" id="portfolio_button">my portfolio</a></p>   
                     </div>
                 </div>
@@ -196,10 +196,11 @@
                 <div id="carouselExampleIndicators" class="carousel slide" style="border: solid 1px white">
                     <div class="carousel-indicators">
                         <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Task Manager"></button>
-                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Connect 4 Solver"></button>
-                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Portfolio Website"></button>
-                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Network intrusion sytsem"></button>
-                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="PassManager"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" class="active" aria-label="MERN E-COMMERCE"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Connect 4 Solver"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Portfolio Website"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Network intrusion sytsem"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="5" aria-label="PassManager"></button>
                     </div>
                     <div class="carousel-inner">
                         <div class="carousel-item active">
@@ -213,6 +214,22 @@
                                         <span class="tt me-2" data-bs-placement="top" title="TailwindCSS"><img height="24" width="24" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/tailwindcss/tailwindcss-original.svg" /></span>
                                         <span class="tt me-2" data-bs-placement="top" title="Next.js"><img height="24" width="24" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/nextjs/nextjs-original.svg" /></span>
                                         <span class="tt" data-bs-placement="top" title="PocketBase"><img height="24" width="24" src="https://cdn.simpleicons.org/pocketbase/0" /></span>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="carousel-item">
+                            <a href="https://github.com/oliverbrown1/mern-ecommerce-solution" target="_blank">
+                                <img src="assets/mern.png" class="d-block w-100 carousel-image">
+                                <div class="carousel-caption d-none d-md-block">
+                                    <h5>Full-Stack Ecommerce using MERN</h5>
+                                    <p>Currently developing a full-stack Ecommerce solution using a MERN stack (MongoDB, Express.js, React.js, Node.js) which currently utilises JWT tokens for authentication and DaisyUI for the frontend.</p>
+                                    <div class="tech-icons mt-1 mb-1">
+                                        <span class="tt me-2" data-bs-placement="top" title="React"><img height="24" width="24" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/react/react-original.svg" /></span>
+                                        <span class="tt me-2" data-bs-placement="top" title="TailwindCSS"><img height="24" width="24" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/tailwindcss/tailwindcss-original.svg" /></span>
+                                        <span class="tt me-2" data-bs-placement="top" title="Node.js"><img height="24" width="24" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/nodejs/nodejs-original.svg" /></span>
+                                        <span class="tt me-2" data-bs-placement="top" title="Express.js"><img height="24" width="24" style="filter: invert(1)" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/express/express-original-wordmark.svg" /></span>
+                                        <span class="tt me-2" data-bs-placement="top" title="MongoDB"><img height="24" width="24" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/mongodb/mongodb-original.svg" /></span>
                                     </div>
                                 </div>
                             </a>
